werk-parser/tests/fail/root_invalid.txt
error[P1001]: parse error
 --> INPUT:2:1
  |
2 | foo
  | ^ expected statement
  |
  = help: one of `config`, `let`, `task`, or `build`
